add current downstream/upstream rates
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>